--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Battery Alert</title>
   <!-- Custom Styles -->
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="manifest" href="manifest.json"/>
 </head>
 
 <body>
