--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Battery Alert</title>
   <!-- Custom Styles -->
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="manifest" href="manifest.json"/>
+  <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
@@ -18,11 +18,11 @@
       <span></span>
     </div>
   </div>
-  <p class="text"></p><br/><br/>
-  
+  <p class="text"></p><br /><br />
   <p class="batteryStats"></p>
-  
   <audio src="sounds/battery_full_capacity.mp3" autoplay></audio>
+  
+  <button type="submit" class="install" style="display: none">install</button>
   <script src="./js/main.js"></script>
 </body>
 
